# plato

./: .gitignore  .gitmodules  AGENTS.md  CHANGE.md  Dockerfile  README.md  cleanup.py  dockerrun.sh  dockerrun_gpu.sh  netlify.toml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: delete_workflow_runs.yml  pypi_publish.yml  pytorch_tests.yml
configs/CIFAR10/: fedavg_resnet18.toml  fedavg_resnet18_dp.toml  fedavg_resnet18_torchhub.toml  fedavg_vgg16.toml  fedavg_vgg16_dp.toml  fedavg_wideresnet.toml  split_learning_resnet18.toml  test_enhance_resnet18.toml
configs/CIFAR100/: fedavg_resnet18.toml
configs/CINIC10/: fedavg_vgg16.toml
configs/CelebA/: fedavg_gan_dcgan.toml  fedavg_resnet18.toml
configs/EMNIST/: fedavg_async_lenet5.toml  fedavg_lenet5.toml  fedavg_lenet5_dp.toml  fedavg_lenet5_label_noniid.toml  fedavg_lenet5_mixed_label_noniid.toml
configs/FEMNIST/: FedAvg_LeNet.toml
configs/FashionMNIST/: fedavg_lenet5.toml
configs/HuggingFace/: fedavg_opt_lora.toml  fedavg_shakespeare_bert.toml  fedavg_shakespeare_distilgpt2.toml  fedavg_smol_smoltalk_smollm2_135m.toml  fedavg_wikitext2_gpt2.toml
configs/LeRobot/: lerobot_datasource_base.toml  smolvla_fedavg_two_client_smoke.toml  smolvla_full_finetune.toml  smolvla_single_client_smoke.toml
configs/MNIST/: fedavg_async_lenet5.toml  fedavg_cross_silo_lenet5.toml  fedavg_lenet5.toml  fedavg_lenet5_dp.toml  fedavg_lenet5_he.toml  fedavg_lenet5_mlx.toml  fedavg_lenet5_mpc_additive.toml  fedavg_lenet5_mpc_shamir.toml  fedavg_lenet5_noniid.toml  fedavg_lenet5_timm.toml  fedavg_lenet5_timm_globalLR.toml  fedprox_lenet5.toml  mnist_distribution_noniid.toml  mnist_iid.toml
configs/Nanochat/: parquet_micro.toml  synthetic_micro.toml
configs/Purchase100/: fedavg_customized_multilayer.toml  fedavg_general_mlp.toml  fedavg_multilayer.toml
configs/Texas100/: fedavg_multilayer.toml
configs/TinyImageNet/: fedavg_alexnet.toml  fedavg_googlenet.toml  fedavg_inceptionv3.toml  fedavg_shufflenet.toml  fedavg_squeezenet.toml
configs/ViT/: fedavg_cifar10_dvit.toml  fedavg_cifar10_swinv2.toml  fedavg_cifar10_t2tvit14.toml  fedavg_tinyimagenet_levit.toml
docs/: mkdocs.yml  nanochat_integration_checklist.md  third_party.md
docs/docs/: ccdb.md  deployment.md  development.md  index.md  install.md  misc.md  quickstart.md
examples/basic/: basic.py  config.toml  server_strategies.py
examples/callbacks/: callback_examples.py  callbacks.py
examples/composable_trainer/: composable_trainer.py
examples/customized/: client.toml  custom_client.py  (+2 more)
plato/: client.py  config.py
tests/: __init__.py  config.toml  conftest.py  test_config_loader.py  test_nanochat_integration.py
(+725 files in other folders)
