[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plato-learn"
version = "1.4.3"
description = "Plato: a research framework for federated learning"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"

dependencies = [
    "aiohttp",
    "accelerate",
    "boto3",
    "datasets",
    "evaluate",
    "gdown",
    "lightly",
    "munch",
    "numpy",
    "peft",
    "python-socketio",
    "requests",
    "safetensors",
    "scipy",
    "tenseal",
    "timm",
    "torch",
    "torch-optimizer",
    "torchvision",
    "transformers",
    "zstd",
]

[project.optional-dependencies]
mpc = [
    "kazoo"
]
rl = [
    "gymnasium"
]
dp = [
    "opacus"
]
mlx = [
    "mlx",
]
nanochat = [
    "datasets",
    "numpy",
    "psutil",
    "regex",
    "tiktoken",
    "tokenizers",
    "torch",
    "wandb",
    "jinja2",
    "PyYAML",
]

[project.urls]
Homepage = "https://github.com/TL-System/plato"
Repository = "https://github.com/TL-System/plato"
Documentation = "https://platodocs.netlify.app/"

# Basic tool configuration
[tool.ruff]
exclude = [
    ".venv",
    "plato/models/dvit",
    "plato/models/t2tvit",
]
include = [
    "pyproject.toml",
    "plato/**/*.py",
    "tests/**/*.py",
    "examples/**/*.py",
]
line-length = 88
lint.select = ["I"]

[tool.hatch.build.targets.wheel]
packages = ["plato"]

[tool.uv.workspace]
members = [
    "examples/unlearning/fedunlearning",
    "examples/unlearning/knot",
    "examples/client_selection/pisces",
    "examples/client_selection/polaris",
    "examples/split_learning/llm_split_learning",
    "examples/ssl/calibre",
    "examples/ssl/smog",
    "examples/model_search/anycostfl",
    "examples/model_search/fedrolex",
    "examples/model_search/pfedrlnas/VIT",
    "examples/model_search/pfedrlnas/MobileNetV3",
    "examples/model_search/heterofl",
    "examples/detector",
    "examples/gradient_leakage_attacks",
    "tools",
    "examples/nanochat",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

# ty (type checker) configuration
[tool.ty]

[tool.ty.src]
# Remove `build` from the excluded directories.
exclude = [
    "examples/outdated",
    "external/nanochat",
    "examples/model_search/pfedrlnas/VIT/nasvit_wrapper", 
    "examples/model_search/pfedrlnas/DARTS/Darts",
    "examples/model_search/pfedrlnas/MobileNetV3/model",
    "examples/model_search/fedrlnas/Darts/",
]

[tool.ty.rules]
"unresolved-import" = "ignore"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require end-to-end config smoke runs.",
]
